dist/1.0/bin/sample/retrieveUnpackaged/objects/RequestTemplateField__c.object
<CustomObject>
    <description>Fields for Request Import Templates</description>
    <fields>
        <fullName>ColumnNo__c</fullName>
        <description>Column Number</description>
        <inlineHelpText>Column Number in the File</inlineHelpText>
        <label>Column No</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <description>Type of data expected in the File</description>
        <inlineHelpText>Type of data expected in the File</inlineHelpText>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelatedField__c</fullName>
        <description>Field from Related Object that stores searched data</description>
        <inlineHelpText>Field from Related Object that stores searched data</inlineHelpText>
        <label>Related Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedObject__c</fullName>
        <description>Related Object from which the data should be retrieved</description>
        <inlineHelpText>Related Object from which ID should be retrieved</inlineHelpText>
        <label>Related Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTemplate__c</fullName>
        <description>Request Import Template containing the field</description>
        <label>Request Template</label>
        <referenceTo>RequestTemplate__c</referenceTo>
        <relationshipLabel>Template Fields</relationshipLabel>
        <relationshipName>Request_Template_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Request_Field__c</fullName>
        <description>Request Field to which information should be entered</description>
        <inlineHelpText>Request Field that will store the data</inlineHelpText>
        <label>Request Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if data in the column is required</description>
        <inlineHelpText>Indicates if data in the column is required</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Request Template Field</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Template Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Column_Number</fullName>
        <active>true</active>
        <description>Checks if entered Column Number is not lower than 1</description>
        <errorConditionFormula>ColumnNo__c &lt; 1</errorConditionFormula>
        <errorDisplayField>ColumnNo__c</errorDisplayField>
        <errorMessage>Column Number must be higher than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Field_Required</fullName>
        <active>true</active>
        <description>Requires value in Related Field if Related Object is not empty</description>
        <errorConditionFormula>AND(ISNULL(RelatedField__c),  NOT(ISNULL(RelatedObject__c)))</errorConditionFormula>
        <errorDisplayField>RelatedField__c</errorDisplayField>
        <errorMessage>Related Field is Required if Related Object was entered</errorMessage>
    </validationRules>
</CustomObject>